--- a/renamerIdee/renamerIdee/renamerIdee.csproj
+++ b/renamerIdee/renamerIdee/renamerIdee.csproj
@@ -43,8 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Matcher.cs" />
     <Compile Include="Program.cs" />
+	  <Compile Include="UserInterface.cs" />
+	  <Compile Include="FileRenamer.cs" />
+	  <Compile Include="SequenceGenerator.cs" />
+	  <Compile Include="PatternMatcher.cs" />
+	  <Compile Include="Helpers.cs" />
+	  <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
